correções na doc do swagger.
